keep classes of original input for new inputs

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 	<p>
 		<label for="date1">Select a date:</label>
-		<input name="date" type="date" id="date1"/>
+		<input name="date" type="date" id="date1" class="test class"/>
 	</p>
 
 	<h2>The output-value of the input-field is:</h2>
