Initial values should be set on the field when initializing

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <p>
         <label for="date2">Select a date:</label>
-        <input name="date" type="date" id="date2"/>
+        <input name="date" type="text" id="date2" value="1442613600"/>
     </p>
 
     <h2>The output-value of the input-field is:</h2>
@@ -76,7 +76,7 @@
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
 <script src="bower_components/momentjs/moment.js"></script>
 <script src="bower_components/pikaday/pikaday.js"></script>
-<script src="dist/pikaday-responsive.js"></script>
+<script src="src/pikaday-responsive.js"></script>
 
 <script>
     var $date1 = $("#date1");
